objects/Transaction_Summary_Header__c.object
<CustomObject>
    <description>This is used to group together transaction summary records which are created for export to the finance system (VSA-33)</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This is the selected end date for the transactions that make up this summary (UUK-910)</description>
        <inlineHelpText>This is the selected end date for the transactions that make up this summary</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Export_Name__c</fullName>
        <description>This is the name of the settings that have been used to generate these records (UUK-910)</description>
        <inlineHelpText>This is the name of the settings that have been used to generate these records</inlineHelpText>
        <label>Export Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Export_File_Date__c</fullName>
        <description>This is the last day of the previous month which is used in the Gift Aid export file to group transactions (UUK-1823)</description>
        <formula>DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),1) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the last day of the previous month which is used in the Gift Aid export file to group transactions</inlineHelpText>
        <label>Gift Aid Export File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Error__c</fullName>
        <description>The last batch error that was thrown (UUK-2763)</description>
        <inlineHelpText>The last batch error that was thrown</inlineHelpText>
        <label>Last Batch Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Batch_Errors__c</fullName>
        <description>This is the number of batch errors returned by the batch process (UUK-2763)</description>
        <inlineHelpText>This is the number of batch errors returned by the batch process</inlineHelpText>
        <label>Number of Batch Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <description>The date that the related records were posted to the finance system i.e. export created (UUK-910)</description>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Selection_1__c</fullName>
        <description>Details of an additional selection for the transaction records to be included in this summary (UUK-910)</description>
        <inlineHelpText>Details of an additional selection for the transaction records to be included in this summary</inlineHelpText>
        <label>Selection 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selection_2__c</fullName>
        <description>Details of an additional selection for the transaction records to be included in this summary (UUK-910)</description>
        <inlineHelpText>Details of an additional selection for the transaction records to be included in this summary</inlineHelpText>
        <label>Selection 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is the selected start date for the transactions that make up this summary (UUK-910)</description>
        <inlineHelpText>This is the selected start date for the transactions that make up this summary</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This indicates whether this batch of summary records have posted to the finance system (UUK-910)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Rolled Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Batch_Count__c</fullName>
        <description>This is the total number of batches (UUK-2763)</description>
        <inlineHelpText>This is the total number of batches</inlineHelpText>
        <label>Total Batch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Summary Header</label>
    <nameField>
        <displayFormat>TSH-{0000000}</displayFormat>
        <label>Transaction Summary Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Summary Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>